--- a/Ng2LazyLoading/index.html
+++ b/Ng2LazyLoading/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="public/assets/css/style.css" rel="stylesheet"/>
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 
     <base href="/">
     <!-- 1. Load libraries -->
@@ -22,6 +23,9 @@
 </head>
 <!-- 3. Display the application -->
 <body>
+<div class="container">
     <my-app>Loading...</my-app>
+</div>
+
 </body>
 </html>
